# genesis-scaffolding

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  test_fts.db
.github/workflows/: ci.yml
agents/: assistant_agent.md  research_critic.md  research_summary.md  simple_agent.md  technical_writer_draft.md  technical_writer_editor.md  technical_writer_linkedin.md  technical_writer_outline.md  technical_writer_twitter.md  technical_writer_visual.md
docs/: agent_clipboard_architecture.md  project_goals.md  scheduled_job_architecture.md  tool_architecture.md  workflow_architecture.md  workflow_tutorial.md
docs/architecture/: agent-integration-architecture.md  architecture_overview.md  memory_system_architecture.md  monorepo-structure.md  myproject-cli.md  myproject-tui.md  prompt_system_architecture.md  scaffolding-overview.md
docs/architecture/how-agents-work/: agent-clipboard.md  agent-loop.md  agent-registry.md  chat-sse-streaming.md  llm-provider-abstraction.md  memory-system.md  prompt-system.md
docs/architecture/modules/: README.md
docs/architecture/myproject-core/: configuration.md  llm-client.md  productivity.md  workflow.md  workspace.md
docs/architecture/myproject-frontend/: auth.md  chat.md  frontend-architecture.md
docs/architecture/myproject-server/: auth.md  sse-streaming.md
docs/architecture/myproject-tools/: memory-tools.md
docs/architecture/platform/: platform-layer.md  productivity-system.md
docs/architecture/tools-and-extensibility/: tool-architecture.md
docs/architecture/workflow-and-automation/: scheduled-jobs.md  scheduled-workflows.md  workflow-architecture.md
docs/design_plans/: 2026-03-31-persistent-memory-system.md
docs/dev_guides/: dev_guideline_frontend_table.md
docs/developer_guides/: developer_guides_overview.md  development-workflow.md  gotchas.md  index.md
docs/developer_guides/adaptation/: README.md  core-web-app.md  decision-process.md  principles.md
docs/developer_guides/extending-the-agent/: implementing-tools.md
docs/guides/: README.md
docs/user_guides/: add_llm_model.md  index.md  quick-task-add.md  quick_add_task.md
docs_template/: README.md
docs_template/architecture/: README.md  architecture_overview.md
docs_template/developer_guides/: README.md  developer_guides_overview.md
docs_template/user_guides/: README.md
frontend/lib/: api-client.ts  session.ts
myproject-cli/: pyproject.toml
myproject-cli/src/myproject_cli/: __init__.py  main.py  streaming.py  utils.py
myproject-cli/src/myproject_cli/chat/: commands.py  session.py  streaming.py
myproject-cli/tests/: example_test.py
myproject-core/: pyproject.toml
myproject-core/src/myproject_core/: __init__.py  agent.py  agent_memory.py  agent_registry.py  configs.py  llm.py  logging_config.py  sandbox_filesystem.py  schemas.py  utils.py  workflow_engine.py  workflow_registry.py  workflow_tasks.py  workspace.py
myproject-core/src/myproject_core/agent/: agent_registry.py  clipboard.py
myproject-core/src/myproject_core/agents/: assistant_agent.md
myproject-core/src/myproject_core/llm/: __init__.py  _anthropic.py
myproject-core/src/myproject_core/memory/: __init__.py  db.py  models.py  service.py
myproject-core/src/myproject_core/productivity/: db.py  models.py  service.py
myproject-core/src/myproject_core/prompts/: __init__.py  builder.py  fragments.py
myproject-core/src/myproject_core/workflow_tasks/: agent_map.py  agent_projection.py  agent_reduce.py  arxiv_download.py  arxiv_search.py  base_task.py  file_ingest.py  file_read.py  list_extractor.py  prompt_agent.py  registry.py  rss_fetch.py  sample_task.py  web_fetch.py  web_search.py
myproject-core/tests/: example_test.py  test_sandbox_filesystem.py
myproject-frontend/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  vitest.config.ts
myproject-frontend/app/: globals.css  layout.tsx
myproject-frontend/lib/: api-client.ts  auth.ts  date-utils.ts  job-utils.ts  task-parser.ts  workflow-utils.ts
myproject-frontend/tests/: example.test.ts
myproject-frontend/types/: api.ts  auth.ts  chat.ts  job.ts  llm.ts  productivity.ts  sandbox.ts  schedule.ts  user.ts  workflow.ts
myproject-server/: pyproject.toml
myproject-server/src/myproject_server/: __init__.py  chat_manager.py  database.py  dependencies.py  main.py  scheduler.py
myproject-server/src/myproject_server/auth/: security.py
myproject-server/src/myproject_server/models/: __init__.py  chat.py  file_record.py  user.py  workflow_job.py  workflow_schedule.py
myproject-server/src/myproject_server/routers/: agents.py  auth.py  chat.py  files.py  jobs.py  llm_config.py  memory.py  productivity.py  schedules.py  users.py  workflows.py
myproject-server/src/myproject_server/schemas/: agent.py  auth.py  chat.py  file_record.py  llm_config.py  memory.py  productivity.py  user.py  workflow_job.py  workflow_schedule.py
myproject-server/src/myproject_server/utils/: config_persistence.py  files.py  workflow_job.py
myproject-server/tests/: example_test.py
myproject-tools/: pyproject.toml
myproject-tools/src/myproject_tools/: __init__.py  arxiv.py  base.py  date_tools.py  file.py  memory_tools.py  pdf.py  productivity_tools.py  registry.py  rss_utils.py  schema.py  test_tools.py  web_fetch.py  web_search.py
myproject-tools/tests/: example_test.py
myproject-tui/: pyproject.toml
myproject-tui/src/myproject_tui/: __init__.py
myproject-tui/tests/: example_test.py
scripts/: rename.sh
src/myproject/: __init__.py  main.py
src/tests/: example.test.py
workflows/: arxiv_briefing.yaml  arxiv_search.yaml  arxiv_search_new.yaml  arxiv_summary.yaml  deep_research.yaml  reference_finder.yaml  sample_multi_agent.yaml  sample_workflow_multi_agent.yaml  sample_workflow_one_agent.yaml  sample_workflow_two_agent.yaml  simple_single_agent.yaml  tech_briefing.yaml  universal_reader.yaml  web_search.yaml  writing_arxiv.yaml
(+167 files in other folders)
