[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nguyentran0212", email = "gen.tran.1991@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "myproject-cli",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[project.scripts]
myproject = "myproject.main:start"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "myproject-core",
    "myproject-cli",
    "myproject-tui",
    "myproject-server",
    "myproject-tools",
]

[tool.uv.sources]
myproject-cli = { workspace = true }

[tool.ruff]
line-length = 108
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade (e.g., f-strings over % formatting, list over typing.List)
    "B",   # bugbear (e.g., no bare except, no mutable default args)
    "C4",  # comprehensions (e.g., simplify inefficient list/dict comprehensions)
]
ignore = [
    "E501", # Line too long — handled by formatter or ignored
]

[tool.pytest.ini_options]
testpaths = [
    "myproject-core/tests",
    "myproject-server/tests",
    "myproject-tools/tests",
    "myproject-cli/tests",
    "myproject-tui/tests",
    "src/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Allow tests to be collected even if no real tests exist yet (placeholder files).
# Once real tests are added, remove filterwarnings or adjust as needed.
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
