[project]
name = "myproject-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nguyentran0212", email = "gen.tran.1991@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "myproject-core",
    "myproject-server",
    "pathspec>=1.0.4",
    "prompt-toolkit>=3.0.52",
    "typer>=0.21.1",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
myproject-core = { workspace = true }
myproject-server = { workspace = true }
